feat(Github): Add github information from user
Author: Louis Landois

--- a/.env
+++ b/.env
@@ -38,3 +38,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+GITHUB_API_TOKEN='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'
+RIOT_API_TOKEN='RGAPI-fe98dcfe-e85f-4f38-b006-8d1373f7f146'
