--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -18,6 +18,30 @@ framework:
     php_errors:
         log: true
 
+    http_client:
+        scoped_clients:
+            # only requests matching scope will use these options
+#            github.client:
+#                scope: 'https://api\.github\.com'
+#                headers:
+#                    Accept: 'application/vnd.github.v3+json'
+#                    Authorization: 'token %env(GITHUB_API_TOKEN)%'
+#                # ...
+
+            # using base_uri, relative URLs (e.g. request("GET", "/repos/symfony/symfony-docs"))
+            # will default to these options
+            github_client:
+                base_uri: 'https://api.github.com'
+                headers:
+                    Accept: 'application/vnd.github+json'
+                    Authorization: 'Bearer %env(GITHUB_API_TOKEN)%'
+                    X-GitHub-Api-Version: '2022-11-28'
+                # ...
+
+            riot_client:
+                base_uri: 'https://euw1.api.riotgames.com'
+                headers:
+                    X-Riot-Token: "%env(RIOT_API_TOKEN)%"
 when@test:
     framework:
         test: true
